--- a/public/style.css
+++ b/public/style.css
@@ -99,3 +99,13 @@
   .outOfStock {
     text-decoration: line-through;
   }
+
+  .tabs {
+    margin-left: 20px;
+    cursor: pointer;
+  }
+
+  .activeTab {
+    color: #16C0B0;
+    text-decoration: underline;
+  }
